# llamacpp_py

./: .gitignore  CMakeLists.txt  models  pyproject.toml  readme.md  test.py
llamapy/: __init__.py  llama.py
llamapy/llamapy/: cli.py
